2005-04-27  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/lily.scm (postscript->png): Add space between arguments to
	ps2png

2005-04-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin: Updates.

2005-04-21  Erik Sandberg  <ersa9195@student.uu.se>

       * scripts/abc2ly: Bugfix

2005-04-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/GNUmakefile (lilypond/index.html): Bugfix:
	depend on all PNG images.

2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user: Fix links.

2005-04-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/text-item.cc: Fix link.

	* Documentation/user/changing-defaults.itely (Changing defaults):
	Fix programs reference links.

2005-04-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in: Include symlinks in webball.

	* Documentation/user/GNUmakefile (source-links): Add symlinks to
	source dir for split and non-split manuals.

	* Documentation/user/*y: Fix @uref/@inputfile links for
	split/non-split HTML documents.

	* stepmake/bin/add-html-footer.py (do_file): Remove info's
	annoying's indication of referencing external document.

2005-04-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/install-info-html.sh: Fix link.

2005-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/documentation-generate.scm (string-append): Fix @usermanref,
	@glossaryref.

	* Documentation/index.html.in: 
	* Documentation/user/GNUmakefile (depth): Update from 2.5.

	* Documentation/user/macros.itexi: Fix @usermanref html links in
	split documents: use @inforef.

2005-03-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/new-fingering-engraver.cc (position_scripts): take priority
	from head position. Backport.

2005-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* make/ly-rules.make ($(outdir)/%.nexi): Remove old makeinfo
	compatibility.

	* Documentation/user/GNUmakefile: Remove splitting-makeinfo.

2005-03-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/page-breaks.ly: Fix and update.
