@@ -7,37 +7,47 @@
                  Han-Wen Nienhuys <hanwen@cs.uu.nl>
 */
 
+#include "lily-guile.hh"
 
 #include <stdio.h>
 #include <stdlib.h>
-#include <libintl.h> 		// gettext on macos x
 #include <math.h>   /* isinf */
 #include <string.h> /* strdup, strchr */
 #include <ctype.h>
 
-#include "lily-proto.hh"
-#include "version.hh"
+/* source-file.hh includes cmath
 
-/* MacOS S fix:
-   source-file.hh includes cmath which undefines isinf and isnan
+   1.  No it doesn't
+   2.  If it did, move this to sources.hh
+   3.  Do not change the code when ! __APPLE__
+   
+   which undefines isinf and isnan
 
-   FIXME: #ifdef MACOS_X?
-*/
+#ifdef __APPLE__
 inline int my_isinf (Real r) { return isinf (r); }
 inline int my_isnan (Real r) { return isnan (r); }
+#define isinf my_isinf
+#define isnan my_isnan
+#endif
+*/
 
 
-#include "libc-extension.hh"
-#include "lily-guile.hh"
-#include "main.hh"
-#include "file-path.hh"
-#include "warn.hh"
-#include "direction.hh"
-#include "offset.hh"
-#include "interval.hh"
-#include "pitch.hh"
+#include "config.hh"
+
+#include "lily-proto.hh"
+
 #include "dimensions.hh"
+#include "direction.hh"
+#include "file-path.hh"
+#include "international.hh"
+#include "interval.hh"
+#include "libc-extension.hh"
+#include "main.hh"
+#include "offset.hh"
+#include "pitch.hh"
 #include "source-file.hh"
+#include "version.hh"
+#include "warn.hh"
 
 // #define TEST_GC
 
@@ -368,7 +378,7 @@ LY_DEFINE (ly_number2string, "ly:number->string",
     {
       Real r (scm_to_double (s));
 
-      if (my_isinf (r) || my_isnan (r))
+      if (isinf (r) || isnan (r))
 	{
 	  programming_error ("Infinity or NaN encountered while converting Real number; setting to zero.");
 	  r = 0.0;
