@@ -1,3 +1,13 @@
+2005-04-28  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/include/mingw-compatibility.hh: New file.
+
+2005-04-27  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/lily-guile.cc: Bugfix: do not include libintl.h.
+
+	* lily/kpath.cc (LY_DEFINE)[!KPATHSEA]: Compile fixes.
+
 2005-04-27  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* scm/lily.scm (postscript->png): Add space between arguments to
